--- a/diamonds/Diamond-Analysis-3.ipynb
+++ b/diamonds/Diamond-Analysis-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4           5   0.31      D     VS1           GIA   1641"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from myutils import run_linear2\n",
+    "from myutils import *\n",
+    "\n",
     "%matplotlib inline    \n",
     "\n",
     "diamonds2 = pd.read_csv('./Diamond_source2.csv')\n",
@@ -848,6 +849,7 @@
     }
    ],
    "source": [
+    "\n",
     "diamonds4 = pd.read_csv('./blue-nile-download-gt2200.csv')\n",
     "print(diamonds4.shape)\n",
     "print(diamonds4.columns)\n",
@@ -855,20 +857,10 @@
     "# trim down to cols we need\n",
     "diamonds4a = diamonds4[['carat','price','clarity','color','cut']]   # copy warning\n",
     "\n",
-    "# cleanup the cols embedded w/ arrays\n",
-    "def cleanBracketsToF(x):\n",
-    "    return float(cleanBracketsToS(x))\n",
-    "\n",
-    "def cleanBracketsToS(x):\n",
-    "    return x.replace(\"['\",'').replace(\"']\",'')\n",
-    "\n",
-    "def cleanCut(str):\n",
-    "    return str[str.index('label') + 9: str.index('labelSmall')-4]\n",
-    "\n",
-    "diamonds4a.loc[:,'carat'] = diamonds4a.loc[:,'carat'].to_frame().applymap(cleanBracketsToF)\n",
-    "diamonds4a.loc[:,'clarity'] = diamonds4a.loc[:,'clarity'].to_frame().applymap(cleanBracketsToS)\n",
-    "diamonds4a.loc[:,'color'] = diamonds4a.loc[:,'color'].to_frame().applymap(cleanBracketsToS)\n",
-    "diamonds4a.loc[:,'cut'] = diamonds4a.loc[:,'cut'].to_frame().applymap(cleanCut)\n",
+    "diamonds4a.loc[:,'carat'] = diamonds4a.loc[:,'carat'].to_frame().applymap(myutils.cleanBracketsToF)\n",
+    "diamonds4a.loc[:,'clarity'] = diamonds4a.loc[:,'clarity'].to_frame().applymap(myutils.cleanBracketsToS)\n",
+    "diamonds4a.loc[:,'color'] = diamonds4a.loc[:,'color'].to_frame().applymap(myutils.cleanBracketsToS)\n",
+    "diamonds4a.loc[:,'cut'] = diamonds4a.loc[:,'cut'].to_frame().applymap(myutils.cleanCut)\n",
     "\n",
     "print(diamonds4a.describe())\n",
     "print(diamonds4a.head())\n",
