--- a/diamonds/Diamond-Analysis-4.ipynb
+++ b/diamonds/Diamond-Analysis-4.ipynb
@@ -20,34 +20,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(53940, 11)\n",
-      "         Unnamed: 0         carat         depth         table         price  \\\n",
-      "count  53940.000000  53940.000000  53940.000000  53940.000000  53940.000000   \n",
-      "mean   26970.500000      0.797940     61.749405     57.457184   3932.799722   \n",
-      "std    15571.281097      0.474011      1.432621      2.234491   3989.439738   \n",
-      "min        1.000000      0.200000     43.000000     43.000000    326.000000   \n",
-      "25%    13485.750000      0.400000     61.000000     56.000000    950.000000   \n",
-      "50%    26970.500000      0.700000     61.800000     57.000000   2401.000000   \n",
-      "75%    40455.250000      1.040000     62.500000     59.000000   5324.250000   \n",
-      "max    53940.000000      5.010000     79.000000     95.000000  18823.000000   \n",
-      "\n",
-      "                  x             y             z  \n",
-      "count  53940.000000  53940.000000  53940.000000  \n",
-      "mean       5.731157      5.734526      3.538734  \n",
-      "std        1.121761      1.142135      0.705699  \n",
-      "min        0.000000      0.000000      0.000000  \n",
-      "25%        4.710000      4.720000      2.910000  \n",
-      "50%        5.700000      5.710000      3.530000  \n",
-      "75%        6.540000      6.540000      4.040000  \n",
-      "max       10.740000     58.900000     31.800000  \n"
+      "(42996, 27)\n",
+      "       imageUrl         price  sellingIndex\n",
+      "count       0.0  4.299600e+04  42996.000000\n",
+      "mean        NaN  1.303102e+04      0.311080\n",
+      "std         NaN  3.357741e+04      0.195304\n",
+      "min         NaN  2.200000e+03      0.000029\n",
+      "25%         NaN  3.939750e+03      0.154481\n",
+      "50%         NaN  6.390000e+03      0.283833\n",
+      "75%         NaN  1.092450e+04      0.441343\n",
+      "max         NaN  2.055533e+06      0.954377\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>carat</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>color</th>\n",
+       "      <th>culet</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>date</th>\n",
+       "      <th>dateSet</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>detailsPageUrl</th>\n",
+       "      <th>fluorescence</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pricePerCarat</th>\n",
+       "      <th>sellingIndex</th>\n",
+       "      <th>shapeCode</th>\n",
+       "      <th>shapeName</th>\n",
+       "      <th>skus</th>\n",
+       "      <th>symmetry</th>\n",
+       "      <th>table</th>\n",
+       "      <th>v360BaseUrl</th>\n",
+       "      <th>visualizationImageUrl</th>\n",
+       "      <th>willArriveForHoliday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['0.70']</td>\n",
+       "      <td>['SI1']</td>\n",
+       "      <td>['F']</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>[{'label': 'Ideal', 'labelSmall': 'Ideal'}]</td>\n",
+       "      <td>['Sep 27']</td>\n",
+       "      <td>['Sep 30']</td>\n",
+       "      <td>['59.6']</td>\n",
+       "      <td>./diamond-details/LD12475462</td>\n",
+       "      <td>['Medium']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['$3,143']</td>\n",
+       "      <td>0.451303</td>\n",
+       "      <td>['RD']</td>\n",
+       "      <td>['Round']</td>\n",
+       "      <td>['LD12475462']</td>\n",
+       "      <td>['Excellent']</td>\n",
+       "      <td>['60.0']</td>\n",
+       "      <td>https://bluenile.v360.in/11/imaged/gia-2205281...</td>\n",
+       "      <td>https://bnsec.bluenile.com/bnsecure/diamondvis...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['0.50']</td>\n",
+       "      <td>['VVS1']</td>\n",
+       "      <td>['D']</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>[{'label': 'Ideal', 'labelSmall': 'Ideal'}]</td>\n",
+       "      <td>['Sep 30']</td>\n",
+       "      <td>['Oct 1']</td>\n",
+       "      <td>['63.2']</td>\n",
+       "      <td>./diamond-details/LD12485581</td>\n",
+       "      <td>['Faint']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['$4,400']</td>\n",
+       "      <td>0.269230</td>\n",
+       "      <td>['RD']</td>\n",
+       "      <td>['Round']</td>\n",
+       "      <td>['LD12485581']</td>\n",
+       "      <td>['Excellent']</td>\n",
+       "      <td>['57.0']</td>\n",
+       "      <td>https://bluenile.v360.in/50/imaged/gia-6325786...</td>\n",
+       "      <td>https://bnsec.bluenile.com/bnsecure/diamondvis...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['0.71']</td>\n",
+       "      <td>['SI1']</td>\n",
+       "      <td>['G']</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>[{'label': 'Ideal', 'labelSmall': 'Ideal'}]</td>\n",
+       "      <td>['Sep 27']</td>\n",
+       "      <td>['Sep 30']</td>\n",
+       "      <td>['62.5']</td>\n",
+       "      <td>./diamond-details/LD12866143</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['$3,099']</td>\n",
+       "      <td>0.405831</td>\n",
+       "      <td>['RD']</td>\n",
+       "      <td>['Round']</td>\n",
+       "      <td>['LD12866143']</td>\n",
+       "      <td>['Excellent']</td>\n",
+       "      <td>['58.0']</td>\n",
+       "      <td>https://bluenile.v360.in/50/imaged/gia-1206495...</td>\n",
+       "      <td>https://bnsec.bluenile.com/bnsecure/diamondvis...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['0.62']</td>\n",
+       "      <td>['VS1']</td>\n",
+       "      <td>['G']</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>[{'label': 'Very Good', 'labelSmall': 'Very Go...</td>\n",
+       "      <td>['Sep 27']</td>\n",
+       "      <td>['Sep 30']</td>\n",
+       "      <td>['59.8']</td>\n",
+       "      <td>./diamond-details/LD12906071</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['$3,548']</td>\n",
+       "      <td>0.241968</td>\n",
+       "      <td>['RD']</td>\n",
+       "      <td>['Round']</td>\n",
+       "      <td>['LD12906071']</td>\n",
+       "      <td>['Excellent']</td>\n",
+       "      <td>['59.0']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['0.70']</td>\n",
+       "      <td>['SI1']</td>\n",
+       "      <td>['G']</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>[{'label': 'Ideal', 'labelSmall': 'Ideal'}]</td>\n",
+       "      <td>['Sep 27']</td>\n",
+       "      <td>['Sep 30']</td>\n",
+       "      <td>['61.5']</td>\n",
+       "      <td>./diamond-details/LD07367187</td>\n",
+       "      <td>['None']</td>\n",
+       "      <td>...</td>\n",
+       "      <td>['$3,144']</td>\n",
+       "      <td>0.357282</td>\n",
+       "      <td>['RD']</td>\n",
+       "      <td>['Round']</td>\n",
+       "      <td>['LD07367187']</td>\n",
+       "      <td>['Excellent']</td>\n",
+       "      <td>['59.0']</td>\n",
+       "      <td>https://bluenile.v360.in/12/imaged/gia-3235315...</td>\n",
+       "      <td>https://bnsec.bluenile.com/bnsecure/diamondvis...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      carat   clarity  color     culet  \\\n",
+       "0  ['0.70']   ['SI1']  ['F']  ['None']   \n",
+       "1  ['0.50']  ['VVS1']  ['D']  ['None']   \n",
+       "2  ['0.71']   ['SI1']  ['G']  ['None']   \n",
+       "3  ['0.62']   ['VS1']  ['G']  ['None']   \n",
+       "4  ['0.70']   ['SI1']  ['G']  ['None']   \n",
+       "\n",
+       "                                                 cut        date     dateSet  \\\n",
+       "0        [{'label': 'Ideal', 'labelSmall': 'Ideal'}]  ['Sep 27']  ['Sep 30']   \n",
+       "1        [{'label': 'Ideal', 'labelSmall': 'Ideal'}]  ['Sep 30']   ['Oct 1']   \n",
+       "2        [{'label': 'Ideal', 'labelSmall': 'Ideal'}]  ['Sep 27']  ['Sep 30']   \n",
+       "3  [{'label': 'Very Good', 'labelSmall': 'Very Go...  ['Sep 27']  ['Sep 30']   \n",
+       "4        [{'label': 'Ideal', 'labelSmall': 'Ideal'}]  ['Sep 27']  ['Sep 30']   \n",
+       "\n",
+       "      depth                detailsPageUrl fluorescence  ... pricePerCarat  \\\n",
+       "0  ['59.6']  ./diamond-details/LD12475462   ['Medium']  ...    ['$3,143']   \n",
+       "1  ['63.2']  ./diamond-details/LD12485581    ['Faint']  ...    ['$4,400']   \n",
+       "2  ['62.5']  ./diamond-details/LD12866143     ['None']  ...    ['$3,099']   \n",
+       "3  ['59.8']  ./diamond-details/LD12906071     ['None']  ...    ['$3,548']   \n",
+       "4  ['61.5']  ./diamond-details/LD07367187     ['None']  ...    ['$3,144']   \n",
+       "\n",
+       "  sellingIndex  shapeCode  shapeName            skus       symmetry     table  \\\n",
+       "0     0.451303     ['RD']  ['Round']  ['LD12475462']  ['Excellent']  ['60.0']   \n",
+       "1     0.269230     ['RD']  ['Round']  ['LD12485581']  ['Excellent']  ['57.0']   \n",
+       "2     0.405831     ['RD']  ['Round']  ['LD12866143']  ['Excellent']  ['58.0']   \n",
+       "3     0.241968     ['RD']  ['Round']  ['LD12906071']  ['Excellent']  ['59.0']   \n",
+       "4     0.357282     ['RD']  ['Round']  ['LD07367187']  ['Excellent']  ['59.0']   \n",
+       "\n",
+       "                                         v360BaseUrl  \\\n",
+       "0  https://bluenile.v360.in/11/imaged/gia-2205281...   \n",
+       "1  https://bluenile.v360.in/50/imaged/gia-6325786...   \n",
+       "2  https://bluenile.v360.in/50/imaged/gia-1206495...   \n",
+       "3                                                NaN   \n",
+       "4  https://bluenile.v360.in/12/imaged/gia-3235315...   \n",
+       "\n",
+       "                               visualizationImageUrl willArriveForHoliday  \n",
+       "0  https://bnsec.bluenile.com/bnsecure/diamondvis...                False  \n",
+       "1  https://bnsec.bluenile.com/bnsecure/diamondvis...                False  \n",
+       "2  https://bnsec.bluenile.com/bnsecure/diamondvis...                False  \n",
+       "3                                                NaN                False  \n",
+       "4  https://bnsec.bluenile.com/bnsecure/diamondvis...                False  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -58,9 +268,10 @@
     "import os\n",
     " \n",
     "# Loading the data\n",
-    "diamonds = pd.read_csv('./diamonds.csv')\n",
+    "diamonds = pd.read_csv('./blue-nile-download-gt2200.csv')\n",
     "print(diamonds.shape)\n",
-    "print(diamonds.describe())\n"
+    "print(diamonds.describe())\n",
+    "diamonds.head()"
    ]
   },
   {
