--- a/diamonds/Diamond-Analysis-4.ipynb
+++ b/diamonds/Diamond-Analysis-4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diamond Analysis Pt4\n",
+    "## Diamond Analysis Pt5 (actually 4)\n",
     "### Analyze and Retrain w/ BlueNile Data Only\n",
     "\n",
     "A few things happened\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,13 @@
       "25%         NaN  3.939750e+03      0.154481\n",
       "50%         NaN  6.390000e+03      0.283833\n",
       "75%         NaN  1.092450e+04      0.441343\n",
-      "max         NaN  2.055533e+06      0.954377\n"
+      "max         NaN  2.055533e+06      0.954377\n",
+      "Index(['carat', 'clarity', 'color', 'culet', 'cut', 'date', 'dateSet', 'depth',\n",
+      "       'detailsPageUrl', 'fluorescence', 'hasVisualization', 'id', 'imageUrl',\n",
+      "       'lxwRatio', 'measurements', 'polish', 'price', 'pricePerCarat',\n",
+      "       'sellingIndex', 'shapeCode', 'shapeName', 'skus', 'symmetry', 'table',\n",
+      "       'v360BaseUrl', 'visualizationImageUrl', 'willArriveForHoliday'],\n",
+      "      dtype='object')\n"
      ]
     },
     {
@@ -255,7 +261,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,64 +272,19 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "import myutils \n",
     " \n",
     "# Loading the data\n",
-    "diamonds = pd.read_csv('./blue-nile-download-gt2200.csv')\n",
-    "print(diamonds.shape)\n",
-    "print(diamonds.describe())\n",
-    "diamonds.head()"
+    "diamonds5 = pd.read_csv('./blue-nile-download-gt2200.csv')\n",
+    "print(diamonds5.shape)\n",
+    "print(diamonds5.describe())\n",
+    "print(diamonds5.columns)\n",
+    "diamonds5.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(53920, 11)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "diamonds = diamonds.loc[diamonds['x'] != 0]\n",
-    "diamonds = diamonds.loc[diamonds['y'] != 0]\n",
-    "diamonds = diamonds.loc[diamonds['z'] != 0]\n",
-    "\n",
-    "diamonds.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(53917, 11)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "diamonds = diamonds.loc[~((diamonds['x'] > 30) | (diamonds['y'] > 30) | (diamonds['z'] > 30))]\n",
-    "diamonds.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -347,265 +308,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>carat</th>\n",
-       "      <th>cut</th>\n",
        "      <th>color</th>\n",
+       "      <th>cut</th>\n",
        "      <th>clarity</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>table</th>\n",
-       "      <th>price</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>z</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.23</td>\n",
+       "      <th>22075</th>\n",
+       "      <td>1.02</td>\n",
+       "      <td>D</td>\n",
        "      <td>Ideal</td>\n",
-       "      <td>E</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>61.5</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>326</td>\n",
-       "      <td>3.95</td>\n",
-       "      <td>3.98</td>\n",
-       "      <td>2.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>E</td>\n",
-       "      <td>SI1</td>\n",
-       "      <td>59.8</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>326</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>2.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>E</td>\n",
        "      <td>VS1</td>\n",
-       "      <td>56.9</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>327</td>\n",
-       "      <td>4.05</td>\n",
-       "      <td>4.07</td>\n",
-       "      <td>2.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>I</td>\n",
-       "      <td>VS2</td>\n",
-       "      <td>62.4</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>334</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>4.23</td>\n",
-       "      <td>2.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>J</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>63.3</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>335</td>\n",
-       "      <td>4.34</td>\n",
-       "      <td>4.35</td>\n",
-       "      <td>2.75</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  carat      cut color clarity  depth  table  price     x     y  \\\n",
-       "0           1   0.23    Ideal     E     SI2   61.5   55.0    326  3.95  3.98   \n",
-       "1           2   0.21  Premium     E     SI1   59.8   61.0    326  3.89  3.84   \n",
-       "2           3   0.23     Good     E     VS1   56.9   65.0    327  4.05  4.07   \n",
-       "3           4   0.29  Premium     I     VS2   62.4   58.0    334  4.20  4.23   \n",
-       "4           5   0.31     Good     J     SI2   63.3   58.0    335  4.34  4.35   \n",
-       "\n",
-       "      z  \n",
-       "0  2.43  \n",
-       "1  2.31  \n",
-       "2  2.31  \n",
-       "3  2.63  \n",
-       "4  2.75  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "diamonds.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>carat</th>\n",
-       "      <th>cut</th>\n",
-       "      <th>color</th>\n",
-       "      <th>clarity</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>table</th>\n",
-       "      <th>price</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>z</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>16283</th>\n",
-       "      <td>16284</td>\n",
-       "      <td>3.00</td>\n",
+       "      <th>21746</th>\n",
+       "      <td>1.02</td>\n",
+       "      <td>H</td>\n",
        "      <td>Very Good</td>\n",
-       "      <td>H</td>\n",
-       "      <td>I1</td>\n",
-       "      <td>63.1</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>6512</td>\n",
-       "      <td>9.23</td>\n",
-       "      <td>9.10</td>\n",
-       "      <td>5.77</td>\n",
+       "      <td>VVS2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19339</th>\n",
-       "      <td>19340</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>Premium</td>\n",
+       "      <th>36822</th>\n",
+       "      <td>1.54</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>VS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20262</th>\n",
+       "      <td>1.09</td>\n",
        "      <td>I</td>\n",
-       "      <td>I1</td>\n",
-       "      <td>62.7</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>8040</td>\n",
-       "      <td>9.10</td>\n",
-       "      <td>8.97</td>\n",
-       "      <td>5.67</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>VS1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19346</th>\n",
-       "      <td>19347</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>H</td>\n",
-       "      <td>I1</td>\n",
-       "      <td>67.1</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>8044</td>\n",
-       "      <td>8.93</td>\n",
-       "      <td>8.84</td>\n",
-       "      <td>5.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21758</th>\n",
-       "      <td>21759</td>\n",
-       "      <td>3.11</td>\n",
-       "      <td>Fair</td>\n",
-       "      <td>J</td>\n",
-       "      <td>I1</td>\n",
-       "      <td>65.9</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>9823</td>\n",
-       "      <td>9.15</td>\n",
-       "      <td>9.02</td>\n",
-       "      <td>5.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21862</th>\n",
-       "      <td>21863</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>Premium</td>\n",
+       "      <th>12001</th>\n",
+       "      <td>1.03</td>\n",
        "      <td>F</td>\n",
-       "      <td>I1</td>\n",
-       "      <td>62.2</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>9925</td>\n",
-       "      <td>9.24</td>\n",
-       "      <td>9.13</td>\n",
-       "      <td>5.73</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>SI2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0  carat        cut color clarity  depth  table  price     x  \\\n",
-       "16283       16284   3.00  Very Good     H      I1   63.1   55.0   6512  9.23   \n",
-       "19339       19340   3.01    Premium     I      I1   62.7   58.0   8040  9.10   \n",
-       "19346       19347   3.00       Fair     H      I1   67.1   57.0   8044  8.93   \n",
-       "21758       21759   3.11       Fair     J      I1   65.9   57.0   9823  9.15   \n",
-       "21862       21863   3.01    Premium     F      I1   62.2   56.0   9925  9.24   \n",
-       "\n",
-       "          y     z  \n",
-       "16283  9.10  5.77  \n",
-       "19339  8.97  5.67  \n",
-       "19346  8.84  5.97  \n",
-       "21758  9.02  5.98  \n",
-       "21862  9.13  5.73  "
+       "       carat color        cut clarity\n",
+       "22075   1.02     D      Ideal     VS1\n",
+       "21746   1.02     H  Very Good    VVS2\n",
+       "36822   1.54     D      Ideal     VS1\n",
+       "20262   1.09     I      Ideal     VS1\n",
+       "12001   1.03     F      Ideal     SI2"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diamonds.loc[diamonds['carat'] >= 3].head()"
+    "diamonds5a = diamonds5.copy()\n",
+    "diamonds5a.loc[:,'carat'] = diamonds5a.loc[:,'carat'].to_frame().applymap(myutils.cleanBracketsToF)\n",
+    "diamonds5a.loc[:,'clarity'] = diamonds5a.loc[:,'clarity'].to_frame().applymap(myutils.cleanBracketsToS)\n",
+    "diamonds5a.loc[:,'color'] = diamonds5a.loc[:,'color'].to_frame().applymap(myutils.cleanBracketsToS)\n",
+    "diamonds5a.loc[:,'cut'] = diamonds5a.loc[:,'cut'].to_frame().applymap(myutils.cleanCut)\n",
+    "price5 = diamonds5a['price']\n",
+    "diamonds5a = diamonds5a[['carat','color','cut','clarity']]\n",
+    "diamonds5a.sample(n=5,random_state=11 )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stripped out the 0's and the > 30's now we are ready"
+    "### A little bit of visualization\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OneHot the categoricals"
    ]
   },
   {
@@ -746,7 +539,10 @@
     }
    ],
    "source": [
-    "diamonds.head()"
+    "cut = pd.get_dummies( diamonds4a['cut'], prefix='cut_')\n",
+    "color = pd.get_dummies( diamonds4a['color'], prefix='color_')\n",
+    "clarity = pd.get_dummies( diamonds4a['clarity'], prefix='clarity_')\n",
+    "\n"
    ]
   },
   {
