updated data csv

--- a/diamonds/Diamond-Analysis-4.ipynb
+++ b/diamonds/Diamond-Analysis-4.ipynb
@@ -451,9 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   carat color    cut clarity  price\n",
+      "0   0.23     D  Ideal      FL    871\n",
+      "1   0.23     D  Ideal      FL    861\n",
+      "2   0.23     D  Ideal      FL    866\n",
+      "3   0.23     D  Ideal      FL    835\n",
+      "4   0.23     D  Ideal      FL    835\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -536,7 +548,7 @@
        "max         4.500000  272018.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,6 +557,10 @@
     "# narrow down to <= 5 carats since beyond this has alot less data\n",
     "\n",
     "diamonds5b = diamonds5a.loc[(diamonds5a['carat'] <= 4.5)]\n",
+    "print(diamonds5b.head())\n",
+    "\n",
+    "# save this file\n",
+    "diamonds5b.to_csv('diamonds5b-4c+price.csv')\n",
     "diamonds5b.describe()\n"
    ]
   },
@@ -1002,12 +1018,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalize/Scale the other input columns"
+    "## Normalize/Scale the other input columns (diamonds5d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -1221,7 +1237,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,6 +1267,7 @@
     "print(diamonds5d.shape)\n",
     "\n",
     "#diamonds5d = pd.concat([ diamonds5d, caratDF], axis=1)\n",
+    "diamonds5d.to_csv('diamonds5d-4c+price-onehotscaled.csv')\n",
     "diamonds5d.tail()"
    ]
   },
@@ -3373,7 +3390,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
