--- a/notebooks/Spark-fun.ipynb
+++ b/notebooks/Spark-fun.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "init\n",
-      "<SparkContext master=local[*] appName=Pi>\n",
-      "3.1436\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'findspark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-0ab9e6f88fb1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'findspark'"
      ]
     }
    ],
@@ -42,45 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <div>\n",
-       "                <p><b>SparkSession - in-memory</b></p>\n",
-       "                \n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v2.4.5</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>Python Spark SQL basic example</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        \n",
-       "            </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x1febb3fe148>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -95,68 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+\n",
-      "|                 _c0|\n",
-      "+--------------------+\n",
-      "|             text|id|\n",
-      "|                 !|0|\n",
-      "|           ! '|22935|\n",
-      "|          ! ''|18235|\n",
-      "|       ! Alas|179257|\n",
-      "|   ! Brilliant|22936|\n",
-      "| ! Brilliant !|40532|\n",
-      "|! Brilliant ! '|2...|\n",
-      "|       ! C'mon|60624|\n",
-      "|! Gollum 's ` per...|\n",
-      "|               ! Oh |\n",
-      "|  ! Romething|140882|\n",
-      "|        ! Run|179259|\n",
-      "|   ! The Movie|60625|\n",
-      "|! The camera twir...|\n",
-      "|! True Hollywood ...|\n",
-      "|        ! Wow|179261|\n",
-      "|     ! Zoom !|179262|\n",
-      "|           !?|220445|\n",
-      "|         !? '|220446|\n",
-      "+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n",
-      "+------------+\n",
-      "|         _c0|\n",
-      "+------------+\n",
-      "|id|sentiment|\n",
-      "|       0|0.5|\n",
-      "|       1|0.5|\n",
-      "|   2|0.44444|\n",
-      "|       3|0.5|\n",
-      "|   4|0.42708|\n",
-      "|     5|0.375|\n",
-      "|   6|0.41667|\n",
-      "|   7|0.54167|\n",
-      "|   8|0.33333|\n",
-      "|   9|0.45833|\n",
-      "|  10|0.47222|\n",
-      "|  11|0.59722|\n",
-      "|  12|0.33333|\n",
-      "|  13|0.93056|\n",
-      "|  14|0.80556|\n",
-      "|  15|0.81944|\n",
-      "|  16|0.76389|\n",
-      "|      17|0.5|\n",
-      "|      18|0.5|\n",
-      "+------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# spark is an existing SparkSession\n",
     "df = spark.read.csv(\"../nlp/stanfordSentimentTreebank/dictionary_sm.txt\")\n",
@@ -169,42 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+------+\n",
-      "|                text|    id|\n",
-      "+--------------------+------+\n",
-      "|                   !|     0|\n",
-      "|                 ! '| 22935|\n",
-      "|                ! ''| 18235|\n",
-      "|              ! Alas|179257|\n",
-      "|         ! Brilliant| 22936|\n",
-      "|       ! Brilliant !| 40532|\n",
-      "|     ! Brilliant ! '| 22937|\n",
-      "|             ! C'mon| 60624|\n",
-      "|! Gollum 's ` per...| 13402|\n",
-      "|! Oh , look at th...|179258|\n",
-      "|         ! Romething|140882|\n",
-      "|               ! Run|179259|\n",
-      "|         ! The Movie| 60625|\n",
-      "|! The camera twir...|179260|\n",
-      "|! True Hollywood ...|140883|\n",
-      "|               ! Wow|179261|\n",
-      "|            ! Zoom !|179262|\n",
-      "|                  !?|220445|\n",
-      "|                !? '|220446|\n",
-      "|                   #| 60626|\n",
-      "+--------------------+------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = spark.read.load(\"../nlp/stanfordSentimentTreebank/dictionary_sm.txt\",\n",
     "                     format=\"csv\", sep=\"|\", inferSchema=\"true\", header=\"true\")\n",
@@ -213,46 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- text: string (nullable = true)\n",
-      " |-- id: integer (nullable = true)\n",
-      "\n",
-      "+--------------------+------+\n",
-      "|                text|    id|\n",
-      "+--------------------+------+\n",
-      "|                   !|     0|\n",
-      "|                 ! '| 22935|\n",
-      "|                ! ''| 18235|\n",
-      "|              ! Alas|179257|\n",
-      "|         ! Brilliant| 22936|\n",
-      "|       ! Brilliant !| 40532|\n",
-      "|     ! Brilliant ! '| 22937|\n",
-      "|             ! C'mon| 60624|\n",
-      "|! Gollum 's ` per...| 13402|\n",
-      "|! Oh , look at th...|179258|\n",
-      "|         ! Romething|140882|\n",
-      "|               ! Run|179259|\n",
-      "|         ! The Movie| 60625|\n",
-      "|! The camera twir...|179260|\n",
-      "|! True Hollywood ...|140883|\n",
-      "|               ! Wow|179261|\n",
-      "|            ! Zoom !|179262|\n",
-      "|                  !?|220445|\n",
-      "|                !? '|220446|\n",
-      "|                   #| 60626|\n",
-      "+--------------------+------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.printSchema()\n",
     "df.createOrReplaceGlobalTempView(\"sentences\")\n",
@@ -261,42 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+------+\n",
-      "|                word|    id|\n",
-      "+--------------------+------+\n",
-      "|                text|    id|\n",
-      "|                   !|     0|\n",
-      "|                 ! '| 22935|\n",
-      "|                ! ''| 18235|\n",
-      "|              ! Alas|179257|\n",
-      "|         ! Brilliant| 22936|\n",
-      "|       ! Brilliant !| 40532|\n",
-      "|     ! Brilliant ! '| 22937|\n",
-      "|             ! C'mon| 60624|\n",
-      "|! Gollum 's ` per...| 13402|\n",
-      "|! Oh , look at th...|179258|\n",
-      "|         ! Romething|140882|\n",
-      "|               ! Run|179259|\n",
-      "|         ! The Movie| 60625|\n",
-      "|! The camera twir...|179260|\n",
-      "|! True Hollywood ...|140883|\n",
-      "|               ! Wow|179261|\n",
-      "|            ! Zoom !|179262|\n",
-      "|                  !?|220445|\n",
-      "|                !? '|220446|\n",
-      "+--------------------+------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql.types import *\n",
     "\n",
@@ -328,56 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------------+\n",
-      "|databaseName|\n",
-      "+------------+\n",
-      "|     default|\n",
-      "+------------+\n",
-      "\n",
-      "+--------+------------+-----------+\n",
-      "|database|   tableName|isTemporary|\n",
-      "+--------+------------+-----------+\n",
-      "| default|saved_words2|      false|\n",
-      "|        | parquetfile|       true|\n",
-      "|        |        word|       true|\n",
-      "+--------+------------+-----------+\n",
-      "\n",
-      "+--------------------+------+\n",
-      "|                text|    id|\n",
-      "+--------------------+------+\n",
-      "|                   !|     0|\n",
-      "|                 ! '| 22935|\n",
-      "|                ! ''| 18235|\n",
-      "|              ! Alas|179257|\n",
-      "|         ! Brilliant| 22936|\n",
-      "|       ! Brilliant !| 40532|\n",
-      "|     ! Brilliant ! '| 22937|\n",
-      "|             ! C'mon| 60624|\n",
-      "|! Gollum 's ` per...| 13402|\n",
-      "|! Oh , look at th...|179258|\n",
-      "|         ! Romething|140882|\n",
-      "|               ! Run|179259|\n",
-      "|         ! The Movie| 60625|\n",
-      "|! The camera twir...|179260|\n",
-      "|! True Hollywood ...|140883|\n",
-      "|               ! Wow|179261|\n",
-      "|            ! Zoom !|179262|\n",
-      "|                  !?|220445|\n",
-      "|                !? '|220446|\n",
-      "|                   #| 60626|\n",
-      "+--------------------+------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.write.mode(\"overwrite\").saveAsTable(\"saved_words2\")\n",
     "\n",
@@ -388,70 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+------+\n",
-      "|                text|    id|\n",
-      "+--------------------+------+\n",
-      "|                   !|     0|\n",
-      "|                 ! '| 22935|\n",
-      "|                ! ''| 18235|\n",
-      "|              ! Alas|179257|\n",
-      "|         ! Brilliant| 22936|\n",
-      "|       ! Brilliant !| 40532|\n",
-      "|     ! Brilliant ! '| 22937|\n",
-      "|             ! C'mon| 60624|\n",
-      "|! Gollum 's ` per...| 13402|\n",
-      "|! Oh , look at th...|179258|\n",
-      "|         ! Romething|140882|\n",
-      "|               ! Run|179259|\n",
-      "|         ! The Movie| 60625|\n",
-      "|! The camera twir...|179260|\n",
-      "|! True Hollywood ...|140883|\n",
-      "|               ! Wow|179261|\n",
-      "|            ! Zoom !|179262|\n",
-      "|                  !?|220445|\n",
-      "|                !? '|220446|\n",
-      "|                   #| 60626|\n",
-      "+--------------------+------+\n",
-      "only showing top 20 rows\n",
-      "\n",
-      "+--------------------+------+\n",
-      "|                text|    id|\n",
-      "+--------------------+------+\n",
-      "|                   !|     0|\n",
-      "|                 ! '| 22935|\n",
-      "|                ! ''| 18235|\n",
-      "|              ! Alas|179257|\n",
-      "|         ! Brilliant| 22936|\n",
-      "|       ! Brilliant !| 40532|\n",
-      "|     ! Brilliant ! '| 22937|\n",
-      "|             ! C'mon| 60624|\n",
-      "|! Gollum 's ` per...| 13402|\n",
-      "|! Oh , look at th...|179258|\n",
-      "|         ! Romething|140882|\n",
-      "|               ! Run|179259|\n",
-      "|         ! The Movie| 60625|\n",
-      "|! The camera twir...|179260|\n",
-      "|! True Hollywood ...|140883|\n",
-      "|               ! Wow|179261|\n",
-      "|            ! Zoom !|179262|\n",
-      "|                  !?|220445|\n",
-      "|                !? '|220446|\n",
-      "|                   #| 60626|\n",
-      "+--------------------+------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.write.mode(\"overwrite\").parquet(\"words.parquet\")\n",
     "parquetFile = spark.read.parquet(\"words.parquet\")\n",
@@ -464,42 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+------+---+\n",
-      "|                text|    id| x5|\n",
-      "+--------------------+------+---+\n",
-      "|                   !|     0|  0|\n",
-      "|                 ! '| 22935|  1|\n",
-      "|                ! ''| 18235|  1|\n",
-      "|              ! Alas|179257|  1|\n",
-      "|         ! Brilliant| 22936|  0|\n",
-      "|       ! Brilliant !| 40532|  0|\n",
-      "|     ! Brilliant ! '| 22937|  1|\n",
-      "|             ! C'mon| 60624|  0|\n",
-      "|! Gollum 's ` per...| 13402|  0|\n",
-      "|! Oh , look at th...|179258|  0|\n",
-      "|         ! Romething|140882|  0|\n",
-      "|               ! Run|179259|  1|\n",
-      "|         ! The Movie| 60625|  1|\n",
-      "|! The camera twir...|179260|  0|\n",
-      "|! True Hollywood ...|140883|  1|\n",
-      "|               ! Wow|179261|  1|\n",
-      "|            ! Zoom !|179262|  0|\n",
-      "|                  !?|220445|  1|\n",
-      "|                !? '|220446|  0|\n",
-      "|                   #| 60626|  0|\n",
-      "+--------------------+------+---+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql.functions import lit\n",
     "from pyspark.sql.functions import exp\n",
